[gd_scene load_steps=60 format=3 uid="uid://vssh1p80uxnj"]

[ext_resource type="Texture2D" uid="uid://ciixyqu06owco" path="res://Assets/Sprites/Skeleton enemy.png" id="1_8a6c7"]
[ext_resource type="Script" uid="uid://bjeu2daw8ap7g" path="res://Assets/Enemies/BasicSkeleton/basic_skeleton.gd" id="1_fa6de"]
[ext_resource type="Script" uid="uid://bhaiij1tfp7v6" path="res://Assets/Scripts/hurtbox.gd" id="3_ey4mj"]
[ext_resource type="Script" uid="uid://d3enncgxl66lu" path="res://Assets/Scripts/health_component.gd" id="4_s8rwc"]
[ext_resource type="Script" uid="uid://bqjthq5jbw7og" path="res://Assets/Scripts/loot_component.gd" id="5_1hlfi"]
[ext_resource type="PackedScene" uid="uid://d6md17gbi280" path="res://Assets/Gold/golden_bird.tscn" id="5_u8cdu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vb2cf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fa6de"]
radius = 10.5
height = 33.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pnb4k"]
atlas = ExtResource("1_8a6c7")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nic5g"]
atlas = ExtResource("1_8a6c7")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg6lq"]
atlas = ExtResource("1_8a6c7")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usn4d"]
atlas = ExtResource("1_8a6c7")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xa3l"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p74c1"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysbfn"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_612sy"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn3am"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_43a8u"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kadu6"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa6de"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey4mj"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc8sv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp68t"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb2cf"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8n50"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gcrv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo4b5"]
atlas = ExtResource("1_8a6c7")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hta3q"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tkw8"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_878wh"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgj71"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efuk4"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmp7x"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v6jv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqqyh"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgass"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4qsk"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0o3a"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kobke"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkrh3"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7tfn"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt8np"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo7fv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu8pm"]
atlas = ExtResource("1_8a6c7")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw204"]
atlas = ExtResource("1_8a6c7")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrbsq"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko8cy"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hralm"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7pir"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3hv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wd1q"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nygha"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yp3s"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ehl"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02f1b"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekdi8"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnb4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nic5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg6lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usn4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xa3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p74c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysbfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_612sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn3am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43a8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kadu6")
}],
"loop": false,
"name": &"arise",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa6de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey4mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc8sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp68t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb2cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8n50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gcrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo4b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hta3q")
}],
"loop": false,
"name": &"attack_down",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa6de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey4mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc8sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp68t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb2cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8n50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tkw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_878wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgj71")
}],
"loop": false,
"name": &"attack_up",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efuk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmp7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v6jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqqyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgass")
}],
"loop": false,
"name": &"damage",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4qsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0o3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kobke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkrh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7tfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt8np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo7fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu8pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw204")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrbsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hralm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7pir")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw3hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wd1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nygha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yp3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ehl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02f1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekdi8")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yc8sv"]
radius = 10.5
height = 33.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0o3a"]
radius = 55.0
height = 110.0

[node name="BasicSkeleton" type="CharacterBody2D" node_paths=PackedStringArray("nav", "health_component", "loot_component") groups=["enemy"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fa6de")
nav = NodePath("Nav")
hitbox_shape = SubResource("CircleShape2D_vb2cf")
speed = 90.0
health_component = NodePath("HealthComponent")
loot_component = NodePath("LootComponent")
damage = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_fa6de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j4qsk")
animation = &"attack_up"
frame = 8
frame_progress = 1.0

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
script = ExtResource("3_ey4mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
shape = SubResource("CapsuleShape2D_yc8sv")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_n0o3a")

[node name="LootComponent" type="Node" parent="."]
script = ExtResource("5_1hlfi")
item_drop_scene = ExtResource("5_u8cdu")
metadata/_custom_type_script = "uid://bqjthq5jbw7og"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_s8rwc")
metadata/_custom_type_script = "uid://d3enncgxl66lu"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
